--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^7.25.0"
   },
   "dependencies": {
+    "bignumber.js": "^9.0.1",
+    "ethers": "^5.1.4",
     "typescript": "^4.2.4"
   }
 }
