--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.25.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.1.4",
     "typescript": "^4.2.4"
